--- a/jupyterNotebook/JN-Plotly.ipynb
+++ b/jupyterNotebook/JN-Plotly.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -2707,56 +2707,56 @@
     "y_data = [3, 9, 7]\n",
     "x_bar_name = [\"a\", \"b\", \"c\"]\n",
     "\n",
-    "pxfig = px.bar(x=x_bar_name, y=[1, 3, 2])\n",
+    "fig = px.bar(x=x_bar_name, y=[1, 3, 2])\n",
     "# (optional) show trace name in single px line\n",
     "#...................................\n",
-    "pxfig.data[0].showlegend = True\n",
-    "pxfig.data[0].name = 'px Bar'\n",
+    "fig.data[0].showlegend = True\n",
+    "fig.data[0].name = 'px Bar'\n",
     "#...................................\n",
-    "pxfig.show()\n",
-    "trace_1 = pxfig.data[0]\n",
+    "fig.show()\n",
+    "trace_1 = fig.data[0]\n",
     "\n",
     "\n",
-    "pxfig = px.scatter(x=x_data, y=[1, 3, 2])\n",
+    "fig = px.scatter(x=x_data, y=[1, 3, 2])\n",
     "# (optional) show trace name in single px line\n",
     "#...................................\n",
-    "pxfig.data[0].showlegend = True\n",
-    "pxfig.data[0].name = 'px scatter'\n",
+    "fig.data[0].showlegend = True\n",
+    "fig.data[0].name = 'px scatter'\n",
     "#...................................\n",
-    "pxfig.show()\n",
-    "trace_2 = pxfig.data[0]\n",
+    "fig.show()\n",
+    "trace_2 = fig.data[0]\n",
     "\n",
     "\n",
     "#...................................\n",
     "# Main Figure\n",
     "#...................................\n",
-    "fig=go.Figure()\n",
-    "fig.add_trace(trace_1)\n",
-    "fig.add_trace(trace_2)\n",
-    "fig.add_trace(go.Scatter(x=x_bar_name, y=y_data,\n",
+    "FIG=go.Figure()\n",
+    "FIG.add_trace(trace_1)\n",
+    "FIG.add_trace(trace_2)\n",
+    "FIG.add_trace(go.Scatter(x=x_bar_name, y=y_data,\n",
     "                    # mode='markers',\n",
     "                    # mode='lines',\n",
     "                    mode='lines+markers',\n",
     "                    name='go Scatter'))\n",
-    "fig.show()\n"
+    "FIG.show()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
     "#...................................\n",
     "# 存檔\n",
     "#...................................\n",
-    "fig.write_html('out-plotly_figure.html')\n",
-    "fig.write_html('out-plotly_figure.html', auto_open=True)"
+    "FIG.write_html('out-plotly_figure.html')\n",
+    "FIG.write_html('out-plotly_figure.html', auto_open=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -3713,6 +3713,10 @@
     }
    ],
    "source": [
+    "#...................................\n",
+    "# Heatmaps : https://plotly.com/python/heatmaps/ \n",
+    "# heatmaps = image show != Density Heatmaps (2D Histogram)\n",
+    "#...................................\n",
     "import plotly.express as px\n",
     "data=[[1, 25, 30, 50, 1], [20, 1, 60, 80, 30], [30, 60, 1, 5, 20]]\n",
     "fig = px.imshow(data,\n",
@@ -3726,7 +3730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -5115,7 +5119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -17411,7 +17415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -18741,7 +18745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
