--- a/jupyterNotebook/JN-Plotly.ipynb
+++ b/jupyterNotebook/JN-Plotly.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
     "import libPython.core.util\n",
     "\n",
     "import plotly.express as px\n",
-    "import plotly.graph_objects as go"
+    "import plotly.graph_objects as go\n"
    ]
   },
   {
@@ -2756,7 +2756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -2770,6 +2770,7 @@
          "coloraxis": "coloraxis",
          "hovertemplate": "Day of Week: %{x}<br>Time of Day: %{y}<br>Productivity: %{z}<extra></extra>",
          "name": "0",
+         "texttemplate": "%{z:.2f}",
          "type": "heatmap",
          "x": [
           "Monday",
@@ -3682,12 +3683,10 @@
         },
         "xaxis": {
          "anchor": "y",
-         "constrain": "domain",
          "domain": [
           0,
           1
          ],
-         "scaleanchor": "y",
          "side": "top",
          "title": {
           "text": "Day of Week"
@@ -3696,7 +3695,6 @@
         "yaxis": {
          "anchor": "x",
          "autorange": "reversed",
-         "constrain": "domain",
          "domain": [
           0,
           1
@@ -3722,10 +3720,14 @@
     "fig = px.imshow(data,\n",
     "                labels=dict(x=\"Day of Week\", y=\"Time of Day\", color=\"Productivity\"),\n",
     "                x=['Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday'],\n",
-    "                y=['Morning', 'Afternoon', 'Evening']\n",
+    "                y=['Morning', 'Afternoon', 'Evening'],\n",
+    "                # text_auto= True, # not work on JS, only work on browser\n",
+    "                text_auto='.2f',  #  not work on JS, only work on browser\n",
+    "                aspect=\"auto\"\n",
     "               )\n",
     "fig.update_xaxes(side=\"top\")\n",
-    "fig.show()"
+    "fig.show()\n",
+    "fig.write_html('out-plotly_figure.html', auto_open=True)"
    ]
   },
   {
