--- a/jupyterNotebook/JN-Util.ipynb
+++ b/jupyterNotebook/JN-Util.ipynb
@@ -22,6 +22,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[UNICODE]"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 74,
    "metadata": {},
