line notify utility

--- a/jupyterNotebook/JN-Line Automation.ipynb
+++ b/jupyterNotebook/JN-Line Automation.ipynb
@@ -34,12 +34,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "line notify: https://ithelp.ithome.com.tw/articles/10234877"
+    "- Day 8 : LINE Notify 訊息推播通知 (Python版): https://ithelp.ithome.com.tw/articles/10234115\n",
+    "- LINE Notify: https://notify-bot.line.me/zh_TW/ \n",
+    "  - 個人頁面->發行權杖"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +73,8 @@
     "\n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "    token = Path(r\"C:\\Users\\cloud\\GoogleDrive\\MyPrivy\\憑證\\LINE\\clouds_to_YunTin.com.token.txt\").read_text()\n",
+    "    # token = Path(r\"C:\\Users\\cloud\\GoogleDrive\\MyPrivy\\憑證\\LINE\\clouds_to_YunTin.com.token.txt\").read_text()\n",
+    "    token = Path(r\"C:\\Users\\cloud\\GoogleDrive\\MyPrivy\\憑證\\LINE\\clouds_to_Clouds 機器人.token.txt\").read_text()\n",
     "    message = '我是可以傳貼圖！並隱藏權杖'\n",
     "    ret=lineNotifyMessage(token, message)\n",
     "    print(ret)"
