--- a/jupyterNotebook/JN-Pandas.ipynb
+++ b/jupyterNotebook/JN-Pandas.ipynb
@@ -522,6 +522,7 @@
    "source": [
     "#...................................\n",
     "# 改變column名字\n",
+    "# inplace = True ==> 直接修改，不是副本\n",
     "#............. ......................\n",
     "df.rename(columns={'Age':'年齡'}).head() #改變column名字\n",
     "\n",
