--- a/jupyterNotebook/JN-MyAffirmations_editor.ipynb
+++ b/jupyterNotebook/JN-MyAffirmations_editor.ipynb
@@ -22,7 +22,9 @@
     "3. 將工作目錄的 path/affirmationBackup.zip 揭開壓縮\n",
     "4. 編輯(刪除record)後，重新壓縮\n",
     "5. 手動蓋過google drive上的affirmationBackup.zip\n",
-    "6. 手機上restore後，需要跳出程式，再進入，更動才會生效 （不確定)"
+    "6. 手機上restore後，需要跳出程式，再進入，更動才會生效 （不確定)\n",
+    "\n",
+    "失敗==>自己包的zip, restore似乎會失敗"
    ]
   },
   {
@@ -145,18 +147,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "src_zip_file    = 'C:\\APN\\DATA\\GoogleDrive\\My Affirmations\\affirmationBackup.zip'\n",
-      "work_directory  = 'c:\\APN\\DATA\\OneDrive\\BIN\\cls-toolbox\\jupyterNotebook\\out_Myaffermations\\20230709_1706'\n",
-      "dest_zip_file   = 'c:\\APN\\DATA\\OneDrive\\BIN\\cls-toolbox\\jupyterNotebook\\out_Myaffermations\\20230709_1706\\affirmationBackup-org.zip'\n",
-      "db_file_path    = 'c:\\APN\\DATA\\OneDrive\\BIN\\cls-toolbox\\jupyterNotebook\\out_Myaffermations\\20230709_1706\\My Affirmations\\backup\\affirmationDB.mab'\n",
-      "target_zip_file = 'c:\\APN\\DATA\\OneDrive\\BIN\\cls-toolbox\\jupyterNotebook\\out_Myaffermations\\20230709_1706\\affirmationBackup.zip'\n"
+      "src_zip_file    = 'C:\\APN\\DATA\\GoogleDrive\\affirmationBackup.zip'\n",
+      "work_directory  = 'c:\\APN\\DATA\\OneDrive\\BIN\\cls-toolbox\\jupyterNotebook\\out-Myaffermations\\20230709_1746'\n",
+      "dest_zip_file   = 'c:\\APN\\DATA\\OneDrive\\BIN\\cls-toolbox\\jupyterNotebook\\out-Myaffermations\\20230709_1746\\affirmationBackup-org.zip'\n",
+      "db_file_path    = 'c:\\APN\\DATA\\OneDrive\\BIN\\cls-toolbox\\jupyterNotebook\\out-Myaffermations\\20230709_1746\\My Affirmations\\backup\\affirmationDB.mab'\n",
+      "target_zip_file = 'c:\\APN\\DATA\\OneDrive\\BIN\\cls-toolbox\\jupyterNotebook\\out-Myaffermations\\20230709_1746\\affirmationBackup.zip'\n"
      ]
     }
    ],
@@ -166,7 +168,8 @@
     "Config Setting\n",
     "-----------------------------------------------\n",
     "\"\"\"\n",
-    "src_zip_file = r\"C:\\APN\\DATA\\GoogleDrive\\My Affirmations\\affirmationBackup.zip\"\n",
+    "# src_zip_file = r\"C:\\APN\\DATA\\GoogleDrive\\My Affirmations\\affirmationBackup.zip\"\n",
+    "src_zip_file = r\"C:\\APN\\DATA\\GoogleDrive\\affirmationBackup.zip\"\n",
     "_current_datetime = datetime.now().strftime(\"%Y%m%d_%H%M\")\n",
     "work_directory = os.path.join(os.getcwd(), \"out-Myaffermations\", _current_datetime)\n",
     "_fname, _fext = os.path.splitext(os.path.basename(src_zip_file))\n",
@@ -191,14 +194,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "uncompress: at f'c:\\APN\\DATA\\OneDrive\\BIN\\cls-toolbox\\jupyterNotebook\\out_Myaffermations\\20230709_1706'\n"
+      "uncompress: at f'c:\\APN\\DATA\\OneDrive\\BIN\\cls-toolbox\\jupyterNotebook\\out-Myaffermations\\20230709_1746'\n"
      ]
     }
    ],
@@ -218,20 +221,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "search_string: 座\n",
-      "match_row_ids = []\n",
+      "search_string: 社交\n",
+      "(244, '書摘', '社交媒體應該是一個平台，幫助你看到所愛之人的生活，而不是讓你去嫉妒別人。讓我們與喜樂的人同樂。讓我們培養感恩的心。', 1, None, 244, 17, '', '', None)\n",
+      "(245, '書摘', '你真正應該害怕的是錯過你身邊的人。當你緊盯著手機或平板電腦的時候，這就是你正在錯過的。你可能會錯過你孩子的成長過程。你可能會錯過享受一段親密的婚姻。你可能會錯過充滿意義的深厚友誼。你老是害怕錯過（社交媒體上的）某件事，結果可能會讓你錯過真正最重要的事。', 1, None, 245, 18, '', '', None)\n",
+      "(843, '處事原則', '社交高手聊天術：\\r\\n1. 別說「我也是」。 這種「我也是」的回答，是在告訴對方「這件事情沒什麼特別的」，，要問好玩嗎?\\r\\n2. 別只單純地回答別人的問題, 回答沒有的同時, 延續問對方: 那好玩嗎？\\r\\n3. 將對方說的話延展成新話題, 不要只說是噢，要說，我聽說那裏人都很好是真的嗎？延續新的話題\\r\\n4.  不要問是非題，要問申論題。不要問你一定很高興吧？要問那你是什麼心情？\\r\\n5.  順着對方問題提出反問，不要回答我們也是，可以反問那你都會怎麽解決？', 1, None, 843, 843, '', '', None)\n",
+      "match_row_ids = [244, 245, 843]\n",
       "請輸入欲刪除的id(用逗號隔開,Enter表示输入完成):\n",
       "todel_row_ids: \n",
       "todel_row_ids: \n",
       "Table after delete:\n",
-      "Final Zip Done: c:\\APN\\DATA\\OneDrive\\BIN\\cls-toolbox\\jupyterNotebook\\out_Myaffermations\\20230709_1706\\affirmationBackup.zip\n",
+      "(244, '書摘', '社交媒體應該是一個平台，幫助你看到所愛之人的生活，而不是讓你去嫉妒別人。讓我們與喜樂的人同樂。讓我們培養感恩的心。', 1, None, 244, 17, '', '', None)\n",
+      "(245, '書摘', '你真正應該害怕的是錯過你身邊的人。當你緊盯著手機或平板電腦的時候，這就是你正在錯過的。你可能會錯過你孩子的成長過程。你可能會錯過享受一段親密的婚姻。你可能會錯過充滿意義的深厚友誼。你老是害怕錯過（社交媒體上的）某件事，結果可能會讓你錯過真正最重要的事。', 1, None, 245, 18, '', '', None)\n",
+      "(843, '處事原則', '社交高手聊天術：\\r\\n1. 別說「我也是」。 這種「我也是」的回答，是在告訴對方「這件事情沒什麼特別的」，，要問好玩嗎?\\r\\n2. 別只單純地回答別人的問題, 回答沒有的同時, 延續問對方: 那好玩嗎？\\r\\n3. 將對方說的話延展成新話題, 不要只說是噢，要說，我聽說那裏人都很好是真的嗎？延續新的話題\\r\\n4.  不要問是非題，要問申論題。不要問你一定很高興吧？要問那你是什麼心情？\\r\\n5.  順着對方問題提出反問，不要回答我們也是，可以反問那你都會怎麽解決？', 1, None, 843, 843, '', '', None)\n",
+      "Final Zip Done: c:\\APN\\DATA\\OneDrive\\BIN\\cls-toolbox\\jupyterNotebook\\out-Myaffermations\\20230709_1746\\affirmationBackup.zip\n",
       "Please copy to Google Drive and Restore!\n"
      ]
     }
