--- a/utility/game-ETS2-change_control_profile.ipynb
+++ b/utility/game-ETS2-change_control_profile.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
      "text": [
       "documents_dir=C:\\Users\\cloud\\Documents\n",
       "ets2_user_dir=C:\\Users\\cloud\\Documents\\Euro Truck Simulator 2\n",
-      "backup_dir=C:\\Users\\cloud\\Documents\\Euro Truck Simulator 2\\My KEYCFG Backup\\backup_20231105-2127\n",
+      "backup_dir=C:\\Users\\cloud\\Documents\\Euro Truck Simulator 2\\My KEYCFG Backup\\backup_20240113-1444\n",
       "gampad_dir=C:\\Users\\cloud\\Documents\\Euro Truck Simulator 2\\My KEYCFG Backup\\KEYCFG_Gamepad\n",
       "steering_dir=C:\\Users\\cloud\\Documents\\Euro Truck Simulator 2\\My KEYCFG Backup\\KEYCFG_Steering\n",
       "keycfg_files_org=['C:\\\\Users\\\\cloud\\\\Documents\\\\Euro Truck Simulator 2\\\\steam_profiles\\\\56696F6C65742048756E746572\\\\config_local.cfg', 'C:\\\\Users\\\\cloud\\\\Documents\\\\Euro Truck Simulator 2\\\\steam_profiles\\\\56696F6C65742048756E746572\\\\controls.sii']\n",
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -88,9 +88,9 @@
      "output_type": "stream",
      "text": [
       "請輸入:\n",
-      "input:1 - 備份\n",
-      "backup config_local.cfg ->\"C:\\Users\\cloud\\Documents\\Euro Truck Simulator 2\\My KEYCFG Backup\\backup_20231105-2127\"\n",
-      "backup controls.sii ->\"C:\\Users\\cloud\\Documents\\Euro Truck Simulator 2\\My KEYCFG Backup\\backup_20231105-2127\"\n"
+      "input:2 - 搖桿\n",
+      "KEYCFG_Gamepad : overwrite  config_local.cfg ->\"C:\\Users\\cloud\\Documents\\Euro Truck Simulator 2\\steam_profiles\\56696F6C65742048756E746572\"\n",
+      "KEYCFG_Gamepad : overwrite  controls.sii ->\"C:\\Users\\cloud\\Documents\\Euro Truck Simulator 2\\steam_profiles\\56696F6C65742048756E746572\"\n"
      ]
     }
    ],
